--- a/index.html
+++ b/index.html
@@ -18,5 +18,7 @@
         <p class="placeholder">Search for a meal to see ingredients!</p>
     </div>
 </div>
+
+<script src="script.js"></script>
 </body>
 </html>
